--- a/projects.css
+++ b/projects.css
@@ -106,6 +106,15 @@ div .dot {
   text-align: center; /* Center align the text */
   width: 40%;
 }
+#project3 {
+  color: #fff;
+  position: absolute;
+  top: 75%; /* Adjust as needed to position vertically */
+  left: 25%;
+  transform: translate(-50%, -50%);
+  text-align: center; /* Center align the text */
+  width: 40%;
+}
 .wrapper div:nth-child(2) {
   top: 0%;
   left: 20%;
