--- a/projects.css
+++ b/projects.css
@@ -115,6 +115,16 @@ div .dot {
   text-align: center; /* Center align the text */
   width: 40%;
 }
+
+#project4 {
+  color: #fff;
+  position: absolute;
+  top: 75%; /* Adjust as needed to position vertically */
+  left: 75%;
+  transform: translate(-50%, -50%);
+  text-align: center; /* Center align the text */
+  width: 40%;
+}
 .wrapper div:nth-child(2) {
   top: 0%;
   left: 20%;
