--- a/projects.css
+++ b/projects.css
@@ -81,7 +81,7 @@ div .dot {
 
 #head {
   position: absolute;
-  top: 20%; /* Adjust as needed to position vertically */
+  top: 20%; 
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center; /* Center align the text */
@@ -91,7 +91,7 @@ div .dot {
 #project1 {
   color: #fff;
   position: absolute;
-  top: 40%; /* Adjust as needed to position vertically */
+  top: 40%; 
   left: 25%;
   transform: translate(-50%, -50%);
   text-align: center; /* Center align the text */
@@ -100,7 +100,7 @@ div .dot {
 #project2 {
   color: #fff;
   position: absolute;
-  top: 40%; /* Adjust as needed to position vertically */
+  top: 40%; 
   left: 75%;
   transform: translate(-50%, -50%);
   text-align: center; /* Center align the text */
@@ -109,7 +109,7 @@ div .dot {
 #project3 {
   color: #fff;
   position: absolute;
-  top: 75%; /* Adjust as needed to position vertically */
+  top: 75%; 
   left: 25%;
   transform: translate(-50%, -50%);
   text-align: center; /* Center align the text */
@@ -119,7 +119,7 @@ div .dot {
 #project4 {
   color: #fff;
   position: absolute;
-  top: 75%; /* Adjust as needed to position vertically */
+  top: 75%; 
   left: 75%;
   transform: translate(-50%, -50%);
   text-align: center; /* Center align the text */
